# ClipBridge

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: relay-image.yml
clients/android/: gradle.properties  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/clipbridge/: ClipBridgeAccessibilityService.kt  ClipBridgeApplication.kt  FileTransferModels.kt  ImagePipeline.kt  MainActivity.kt  PairingConfig.kt  PortraitCaptureActivity.kt  ShizukuBridge.kt
clients/android/app/src/main/res/values/: strings.xml
clients/android/app/src/main/res/xml/: clipbridge_accessibility_config.xml  file_paths.xml
clients/android/app/src/test/java/com/clipbridge/: ClipBridgeAccessibilityServicePolicyTest.kt  MainActivityTest.kt
clients/ios/: ClipBridge.entitlements  README.md  project.yml
clients/ios/Keyboard/: ClipBridgeKeyboard.entitlements  Info.plist  KeyboardSync.swift  KeyboardViewController.swift
clients/ios/Sources/: App.swift  AudioKeepalive.swift  BridgeCoordinator.swift  ContentView.swift  FilePickerSheet.swift  FileTransferModels.swift  ImageThumbCache.swift  LocalNetworkPrimer.swift  PairingConfig.swift  PairingScreen.swift  PhotoPickerSheet.swift
clients/ios/Tests/: FileTransferModelsTests.swift
clients/macos/: Package.swift
clients/macos/Resources/: AppIcon.icns
clients/macos/Sources/ClipBridgeApp/: AppDelegate.swift  BridgeCoordinator.swift  ImageTransferView.swift  PairingConfig.swift  PairingView.swift
clients/macos/Sources/ClipbridgeCore/: clipbridge_core.swift
clients/windows/: Cargo.toml  README.md  tauri.conf.json
clients/windows/capabilities/: default.json
clients/windows/icons/: icon.icns
clients/windows/src/: bridge.rs  clipboard_listener.rs  main.rs  pairing.rs
clients/windows/ui/: app.js  index.html  style.css
core/: Cargo.toml
core/src/: blob.rs  client.rs  crypto.rs  file_transfer.rs  group.rs  lan.rs  lib.rs  protocol.rs
core/tests/: file_transfer.rs
deploy/: docker-compose.yml  fly.toml  synology-relay.yml  update.sh
docs/plans/: 2026-05-15-lan-file-transfer-design.md
relay/: Cargo.toml  Dockerfile  docker-compose.yml
relay/src/: blob.rs  blob_routes.rs  hub.rs  lib.rs  main.rs  ws.rs
relay/tests/: client_round_trip.rs  end_to_end.rs
scripts/: build-android-apk.sh  build-android-libs.sh  build-ios-ipa.sh  build-ios-xcframework.sh  build-macos-app.sh  build-macos-xcframework.sh  build-windows-exe.cmd  regen-icons.sh
tools/uniffi-bindgen/: Cargo.toml
