[workspace]
resolver = "2"
members = ["core", "relay", "tools/uniffi-bindgen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.31"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
